--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+/* global.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,7 +10,7 @@
   font-display: swap;
 }
 
-@font-face {
+/*@font-face {
   font-family: 'Montserrat';
   src: url('/fonts/montserrat-v29-latin-regular.woff2') format('woff2');
   font-display: swap;
@@ -25,7 +26,7 @@
   font-family: 'Roboto';
   src: url('/fonts/roboto-v47-latin-regular.woff2') format('woff2');
   font-display: swap;
-}
+}*/
 
 /* Tailwind-aanpassingen */
 :root {
